# lanemaker

./: CMakeLists.txt  GameGraphicsScene.h  IDGenerator.cpp  IDGenerator.h  MapDrawer.cpp  MapDrawer.h  MapExporter.cpp  MapExporter.h  README.md  RoadGraphics.cpp  RoadGraphics.h  curve_fitting.cpp  curve_fitting.h  dev_history.drawio  index.html  junction.cpp  junction.h  lanemaker.rc  main.cpp  mainwindow.cpp  mainwindow.h  resource.h  road.cpp  road.h  roadProfile.cpp  roadProfile.h  road_destruction.cpp  road_drawing.cpp  road_drawing.h  road_operation.cpp  roadrunner.aps  roadrunner.rc  spiral_lookup_table.cpp  test.cc  test_randomization.h  verification.h  view.cpp  view.h  world.cpp
.github/workflows/: cmake-Ubuntu-2404.yml
engine/: Camera.h  OBJ_Loader.h  OpenGLWindow.cpp  OpenGLWindow.h  Vertex.h  gl_buffer_manage.cpp  gl_buffer_manage.h  gl_buffer_manage_instanced.cpp  map_view_gl.cpp  map_view_gl.h  quads_overlap.cpp  shaders.qrc  spatial_indexer.cpp  spatial_indexer.h  spatial_indexer_dynamic.cpp
engine/models/: process_obj.py
engine/shaders/: instanced.vert  simple.vert  texture.frag
libOpenDRIVE-master/: CMakeLists.txt
libOpenDRIVE-master/include/: Junction.h  LaneSection.h  Math.hpp  OpenDriveMap.h  RefLine.h  Road.h  RoadMark.h  RoadObject.h  RoutingGraph.h  Utils.hpp  road_profile.h
libOpenDRIVE-master/include/Geometries/: Arc.h  CubicSpline.h  Line.h  ParamPoly3.h  RoadGeometry.h  Spiral.h
libOpenDRIVE-master/src/: Junction.cpp  LaneSection.cpp  OpenDriveMap.cpp  RefLine.cpp  Road.cpp  RoadObject.cpp  RoutingGraph.cpp  elevation_profile.cpp  lane_profile.cpp  road_profile.cpp
libOpenDRIVE-master/src/Geometries/: Arc.cpp  CubicSpline.cpp  Line.cpp  ParamPoly3.cpp  RoadGeometry.cpp  Spiral.cpp
test/: elevation_profile_test.h  junction_test.h  junction_validation.cpp  junction_verification.h  lane_profile_test.h  randomization_utils.cpp  randomization_utils.h  road_geometry_test.h  road_operation_test.h  road_randomization.h  road_validation.cpp  road_verification.h  single_road_test.h  spatial_query_test.h  test.cc  test_const.h  test_macros.h  validation.cpp  validation.h
traffic/: signal.cpp  signal.h  vehicle.cpp  vehicle.h  vehicle_manager.cpp  vehicle_manager.h
ui/: AnimatedPopupDialog.cpp  AnimatedPopupDialog.h  Camera.h  CreateRoadOptionWidget.cpp  CreateRoadOptionWidget.h  OpenGLWindow.h  RoadGraphics.cpp  Vertex.h  action_defs.h  action_manager.cpp  action_manager.h  gl_buffer_manage.cpp  gl_buffer_manage.h  images.qrc  lane_creation.cpp  main_widget.cpp  main_widget.h  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  map_view.cpp  map_view.h  map_view_gl.cpp  map_view_gl.h  replay_window.cpp  replay_window.h  road_creation.cpp  road_destruction.cpp  road_drawing.cpp  road_drawing.h  road_drawing_new.cpp  road_drawing_new.h  road_graphics.cpp  road_graphics.h  road_lane_drawing.cpp  road_modification.cpp  road_overlaps.cpp  road_overlaps.h  touch_controller.cpp  (+5 more)
util/: label_with_link.cpp  label_with_link.h  multi_segment.cpp  multi_segment.h  preference.cpp  preference.h  stats.cpp  stats.h  triangulation.cpp  triangulation.h
widgets/: AnimatedPopupDialog.cpp  AnimatedPopupDialog.h  DrawOptionDialog.cpp  DrawOptionDialog.h  LaneConfigWidget.cpp  LaneConfigWidget.h  replay_window.cpp
xodr/: MapExporter.h  change_tracker.cpp  change_tracker.h  constants.h  curve_fitting.cpp  curve_fitting.h  id_generator.cpp  id_generator.h  junction.cpp  junction.h  junction_boundary.cpp  junction_generation.cpp  map_exporter.cpp  polyline.cpp  polyline.h  road.cpp  road.h  road_operation.cpp  road_profile.cpp  road_profile.h  spatial_indexer.cpp  spatial_indexer.h  world.h
